--- a/Collection-program/pom.xml
+++ b/Collection-program/pom.xml
@@ -26,6 +26,7 @@
         <tag/>
         <url/>
     </scm>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -55,6 +56,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <version>5.0.0-alpha.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
             <version>5.0.0-alpha.12</version>
         </dependency>
 
